--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -20,3 +20,13 @@
 	border-radius: 1rem;
 	backdrop-filter: blur(2px);
 }
+
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+}
+
+body {
+	min-height: 100%;
+}
