--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -33,15 +33,6 @@
 	padding-bottom: 50px;
 }
 
-@media (max-width: 600px) {
-}
-
-@media (min-width: 601px) {
-}
-
-@media (max-width: 768px) {
-}
-
 @media (max-width: 900px) {
 	.about-content {
 		display: flex;
@@ -54,7 +45,8 @@
 		font-size: var(--fs-lg);
 		line-height: 1.3;
 	}
-}
 
-@media (max-width: 1200px) {
+	.profile-picture {
+		margin: 0;
+	}
 }
